--- a/multi_tenant_auth_app 2/public/index.html
+++ b/multi_tenant_auth_app 2/public/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Multi-Tenant Login</title>
+  <title>Multi-Tenant Login & Register</title>
 </head>
 <body>
   <h2>Tenant Login</h2>
-
   <form id="loginForm">
     <label>Email:</label><br>
-    <input type="email" id="email"><br><br>
+    <input type="email" id="loginEmail"><br><br>
     <label>Password:</label><br>
-    <input type="password" id="password"><br><br>
+    <input type="password" id="loginPassword"><br><br>
     <button type="submit">Login</button>
+  </form>
+
+  <h2>Tenant Register</h2>
+  <form id="registerForm">
+    <label>Email:</label><br>
+    <input type="email" id="registerEmail"><br><br>
+    <label>Password:</label><br>
+    <input type="password" id="registerPassword"><br><br>
+    <button type="submit">Register</button>
   </form>
 
   <div id="afterLogin" style="display: none;">
@@ -21,13 +29,13 @@
   </div>
 
   <script>
+    const hostname = window.location.hostname;
+    const subdomain = hostname.split('.')[0];
+
     document.getElementById("loginForm").addEventListener("submit", async function(event) {
       event.preventDefault();
-
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      const hostname = window.location.hostname;
-      const subdomain = hostname.split('.')[0];
+      const email = document.getElementById("loginEmail").value;
+      const password = document.getElementById("loginPassword").value;
 
       const response = await fetch("http://" + hostname + ":3000/auth/login", {
         method: "POST",
@@ -36,7 +44,6 @@
       });
 
       const data = await response.json();
-
       if (data.token) {
         alert("Login successful. Token: " + data.token);
         localStorage.setItem("token", data.token);
@@ -46,9 +53,29 @@
       }
     });
 
+    document.getElementById("registerForm").addEventListener("submit", async function(event) {
+      event.preventDefault();
+      const email = document.getElementById("registerEmail").value;
+      const password = document.getElementById("registerPassword").value;
+
+      const response = await fetch("http://" + hostname + ":3000/auth/register", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ email, password, tenantId: subdomain })
+      });
+
+      const data = await response.json();
+      if (data.token) {
+        alert("Registration successful. Token: " + data.token);
+        localStorage.setItem("token", data.token);
+        document.getElementById("afterLogin").style.display = "block";
+      } else {
+        alert("Registration failed: " + (data.error || "Unknown error"));
+      }
+    });
+
     document.getElementById("fetchData").addEventListener("click", async function () {
       const token = localStorage.getItem("token");
-      const hostname = window.location.hostname;
 
       const response = await fetch("http://" + hostname + ":3000/multie", {
         headers: {
